--- a/public/templates/loser.html
+++ b/public/templates/loser.html
@@ -1,6 +1,6 @@
-<div>
+<div class="winLose" class="container-fluid">
     <h1>
-        LOSER!
+        LOSER!!
     </h1>
     <button type="button" ng-click="init()" class="btn btn-primary">Restart</button>
 </div>
