--- a/public/templates/winner.html
+++ b/public/templates/winner.html
@@ -1,6 +1,6 @@
-<div>
+<div class="winLose" class="container-fluid">
     <h1>
-        WINNER!
+        WINNER!!
     </h1>
-    <a ng-click="init()" class="btn btn-primary">Restart</a>
+    <button type="button" ng-click="init()" class="btn btn-primary">Restart</button>
 </div>
