same as last one

--- a/public/templates/winner.html
+++ b/public/templates/winner.html
@@ -3,4 +3,6 @@
         WINNER!!
     </h1>
     <button type="button" ng-click="init()" class="btn btn-primary">Restart</button>
+    <button type="button" ng-click="selectWord()" class="btn btn-primary">Play Another</button>
+
 </div>
