--- a/public/templates/loser.html
+++ b/public/templates/loser.html
@@ -3,4 +3,6 @@
         LOSER!!
     </h1>
     <button type="button" ng-click="init()" class="btn btn-primary">Restart</button>
+    <button type="button" ng-click="playAnother()" class="btn btn-primary">Play Another</button>
+
 </div>
