--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,7 @@ table {
     margin-right: auto;
     margin-left: auto;
     margin-top: 200px;
+    /*margin: auto;*/
     text-align: center;
     width: 50%;
     padding: 10px;
@@ -101,7 +102,7 @@ table {
     width:35px;
     height:30px;
     padding-top:5px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
     background:yellow;
     text-align: center;;
     border: 3px double #CCCCCC;
