finished rerouting to database

--- a/public/templates/winner.html
+++ b/public/templates/winner.html
@@ -2,7 +2,7 @@
     <h1>
         WINNER!!
     </h1>
-    <button type="button" ng-click="init()" class="btn btn-primary">Restart</button>
-    <button type="button" ng-click="selectWord()" class="btn btn-primary">Play Another</button>
+
+    <button type="button" ng-click="playAnother()" class="btn btn-primary">Play Another</button>
 
 </div>
