cant figure out testing

--- a/public/templates/loser.html
+++ b/public/templates/loser.html
@@ -2,6 +2,6 @@
     <h1>
         LOSER!!
     </h1>
-    <button type="button" ng-click="playAnother()" class="btn btn-primary">Play Another</button>
+    <button type="button" ng-click="close()" class="btn btn-primary">Play Another</button>
 
 </div>
