--- a/public/templates/winner.html
+++ b/public/templates/winner.html
@@ -2,7 +2,6 @@
     <h1>
         WINNER!!
     </h1>
-
-    <button type="button" ng-click="playAnother()" class="btn btn-primary">Play Another</button>
+    <button type="button" ng-click="close()" class="btn btn-primary">Play Another</button>
 
 </div>
