improved hangman code

--- a/public/templates/loser.html
+++ b/public/templates/loser.html
@@ -2,6 +2,7 @@
     <h1>
         LOSER!!
     </h1>
+    <h3>word was: {{word}}</h3>
     <button type="button" ng-click="close()" class="btn btn-primary">Play Another</button>
 
 </div>
